--- a/Demon Slayer/index.html
+++ b/Demon Slayer/index.html
@@ -58,8 +58,8 @@
         <img class="logo" src="/iloveimg-resized/Logo.webp"> 
         <p>Copyright ©Leonel Rodriguez</p>
         <div class="contenedor-redes">
-            <a class="red" href="#"><img src="./iconos/github.png"></a>
-            <a class="red" href="#"><img src="./iconos/ig.png"></a>
+            <a class="red" href="https://github.com/Leonel-14/Portafolio"><img src="./iconos/github.png"></a>
+            <a class="red" href="https://www.instagram.com/leonel_loz14/"><img src="./iconos/ig.png"></a>
             <a class="red" href="https://www.facebook.com/leonel.rodriguez.14473/"><img src="./iconos/fb.png"></a>
         </div>
     </footer>
