--- a/Landing_page_electricista/index.html
+++ b/Landing_page_electricista/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Electricista domiciliario matriculado. Instalaciones, reparaciones eléctricas y urgencias. Atención rápida y segura.">
     <link rel="stylesheet" href="./styles/body.css">
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/footer.css">
